# esfml

./: CMakeLists.txt
cmake/: Android.mk  Config.cmake  Macros.cmake
cmake/Modules/: FindEGL.cmake  FindGLES.cmake
cmake/Platform/: Android.cmake
cmake/Toolchains/: Android.cmake
cmake/toolchains/: blackberry.toolchain.cmake
doc/: doxyfile.in  mainpage.hpp
examples/: CMakeLists.txt
examples/android/: AndroidManifest.xml
examples/android/jni/: Android.mk  Application.mk  main.cpp
examples/android/res/values/: strings.xml
examples/blackberry/: bar-descriptor.xml
examples/blackberry/src/: main.cpp
examples/cocoa/: CocoaAppDelegate.h  NSString+stdstring.mm
examples/ftp/: CMakeLists.txt  ftp.cpp
examples/opengl/: CMakeLists.txt  opengl.cpp
examples/pong/: CMakeLists.txt  pong.cpp
examples/shader/: CMakeLists.txt  effect.hpp  shader.cpp
examples/sockets/: CMakeLists.txt  tcp.cpp  udp.cpp
examples/sound/: CMakeLists.txt  sound.cpp
examples/sound_capture/: CMakeLists.txt  soundcapture.cpp
examples/user_interface/: CMakeLists.txt  user_interface.cpp
examples/video/: CMakeLists.txt  Video.cpp
examples/video_capture/: CMakeLists.txt  VideoCapture.cpp
examples/voip/: CMakeLists.txt  client.cpp  server.cpp
examples/win32/: CMakeLists.txt  win32.cpp
examples/window/: CMakeLists.txt  window.cpp
examples/x11/: CMakeLists.txt  x11.cpp
extlibs/android/extlibs/: Android.mk
include/: sfml.hpp
include/SFML/: Config.hpp  DirectX.hpp  OpenGL.hpp  Video.hpp
include/SFML/Graphics/: RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Texture.hpp
include/SFML/System/: String.hpp
include/SFML/Video/: Export.hpp  Movie.hpp  Video.hpp  VideoBuffer.hpp  VideoBufferRecorder.hpp  VideoRecorder.hpp  VideoSource.hpp  VideoStream.hpp
include/SFML/Window/: Context.hpp  ContextHandle.hpp  Event.hpp  Resource.hpp  Window.hpp  WindowHandle.hpp
include/sfml/: audio.hpp  config.hpp  graphics.hpp  gui.hpp  network.hpp  opengl.hpp  system.hpp  widgets.hpp  window.hpp
include/sfml/audio/: Listener.hpp  Music.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp  export.hpp
include/sfml/graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Font.hpp  Glyph.hpp  Image.hpp  PrimitiveType.hpp  Rect.hpp  Rect.inl  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  View.hpp  export.hpp
include/sfml/gui/: Button.hpp  Container.hpp  GuiWindow.hpp  Widget.hpp  WidgetHandle.hpp  export.hpp
include/sfml/main/: activity.hpp
include/sfml/network/: Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp  export.hpp
include/sfml/system/: Clock.hpp  InputStream.hpp  Lock.hpp  Mutex.hpp  NonCopyable.hpp  String.hpp  Thread.hpp  Thread.inl  ThreadLocal.hpp  ThreadLocalPtr.hpp  ThreadLocalPtr.inl  Time.hpp  Utf.hpp  Utf.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  error.hpp  export.hpp  sleep.hpp
include/sfml/window/: Context.hpp  ContextSettings.hpp  Event.hpp  GlResource.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  VideoMode.hpp  Window.hpp  WindowHandle.hpp  WindowStyle.hpp  export.hpp
src/SFML/: CMakeLists.txt
src/SFML/Audio/: CMakeLists.txt  SoundFile.cpp
src/SFML/Graphics/: CMakeLists.txt  Font.cpp  GLExtensions.cpp  GLExtensions.hpp  Image.cpp  RenderTarget.cpp  RenderTargetImpl.cpp  RenderTargetImpl.hpp  RenderTexture.cpp  RenderTextureImpl.hpp  RenderTextureImplDefault.cpp  RenderTextureImplDefault.hpp  RenderTextureImplFBO.cpp  RenderTextureImplFBO.hpp  RenderWindow.cpp  RenderWindowImpl.cpp  RenderWindowImpl.hpp  Shader.cpp  ShaderImpl.cpp  ShaderImpl.hpp  Texture.cpp  TextureImpl.hpp
src/SFML/Video/: CMakeLists.txt  Movie.cpp  Video.cpp  VideoBuffer.cpp  VideoBufferRecorder.cpp  VideoFile.cpp  VideoFile.hpp  VideoPlayer.cpp  VideoPlayer.hpp  VideoRecorder.cpp  VideoSource.cpp  VideoStream.cpp
src/SFML/Window/: CMakeLists.txt  Context.cpp  ContextImpl.cpp  ContextImpl.hpp  ContextManager.cpp  ContextManager.hpp  EglContext.cpp  EglContext.hpp  GlContext.cpp  GlContext.hpp  InputImpl.hpp  JoystickImpl.hpp  Resource.cpp  SensorImpl.hpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
src/sfml/: CMakeLists.txt
src/sfml/audio/: ALCheck.cpp  ALCheck.hpp  AudioDevice.cpp  AudioDevice.hpp  CMakeLists.txt  Listener.cpp  Music.cpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundFile.cpp  SoundFile.hpp  SoundRecorder.cpp  SoundSource.cpp  SoundStream.cpp
src/sfml/graphics/: Android.mk  CMakeLists.txt  CircleShape.cpp  Color.cpp  ConvexShape.cpp  Font.cpp  GLCheck.cpp  GLCheck.hpp  Image.cpp  ImageLoader.cpp  ImageLoader.hpp  RectangleShape.cpp  RenderStates.cpp  RenderTarget.cpp  RenderTexture.cpp  RenderTextureImpl.cpp  RenderTextureImpl.hpp  RenderTextureImplDefault.cpp  RenderTextureImplDefault.hpp  RenderTextureImplFBO.cpp  RenderTextureImplFBO.hpp  RenderWindow.cpp  Shader.cpp  Shape.cpp  Sprite.cpp  Text.cpp  Texture.cpp  TextureSaver.cpp  TextureSaver.hpp  Transform.cpp  Transformable.cpp  Vertex.cpp  VertexArray.cpp  View.cpp
src/sfml/gui/: Button.cpp  ButtonImpl.cpp  ButtonImpl.hpp  CMakeLists.txt  Container.cpp  ContainerImpl.hpp  GuiWindow.cpp  GuiWindowImpl.hpp  Widget.cpp  WidgetImpl.hpp
src/sfml/gui/GTK/: ButtonImplGTK.cpp  ButtonImplGTK.hpp  ContainerImplGTK.cpp  GuiWindowImplGTK.cpp
src/sfml/main/: Android.mk  CMakeLists.txt  main.cpp
src/sfml/network/: CMakeLists.txt  Ftp.cpp  Http.cpp  IpAddress.cpp  Packet.cpp  Socket.cpp  SocketImpl.hpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
tools/android/: clean_all.sh  compile_arm-v7a.sh  compile_arm.sh  compile_libs.sh  compile_mips.sh  compile_x86.sh  create_toolchains.sh  download_sources.sh  make_all.sh  readme.txt
tools/blackberry/: compile_device.sh  compile_simulator.sh  download_sources.sh
(+154 files in other folders)
